--- a/css/style.css
+++ b/css/style.css
@@ -168,22 +168,38 @@ header nav a:hover {
 
 .project-links a {
   text-decoration: none;
-  color: #fff;
-  background-image: linear-gradient(to top, #c79081 0%, #dfa579 100%);
+  color: #000;
+  /* background-image: linear-gradient(to top, #c79081 0%, #dfa579 100%); */
   padding: 9px 26px;
   display: inline-block;
-  font-size: 12px;
+  font-size: 16px;
   margin: 15px 0 20px;
   border-radius: 3px;
 }
 
 .project a:hover {
-  text-decoration: underline;
-  color: #fff;
+  opacity: 0.7;
 }
 
 .project:hover {
   opacity: 1;
+}
+
+.bn40 {
+  border-radius: 4px;
+  font-weight: 600;
+  padding: 4px 6px;
+}
+
+.bn40::after {
+  max-width: 100%;
+  height: 2px;
+  display: block;
+  content: '';
+  background: linear-gradient(-90deg, #ff9100 0%, #f10366 50%, #6173ff 100%);
+  opacity: 1;
+  margin-bottom: -6px;
+  margin-top: 1px;
 }
 
 .project .img {
