fix button for darkmode

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ header nav a:hover {
   border-radius: 3px;
 }
 
+.dark .project-links a {
+  color: #c4c4bf;
+}
+
 .project a:hover {
   opacity: 0.7;
 }
