--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ header nav a:hover {
 }
 
 .main-section {
-  margin: 50px auto;
+  margin: 50px auto 0;
   width: 600px;
 }
 .main-section a {
@@ -128,24 +128,31 @@ header nav a:hover {
   text-align: center;
   margin-top: 20px;
 }
-.main-section .projects .project {
+.project {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 25px;
-  margin-bottom: 50px;
   padding: 0 20px;
   color: #fff;
   opacity: 0.9;
-  width: 100%;
+  width: 49%;
+  min-height: 300px;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-
+@media (max-width: 1200px) {
+  .project {
+    margin: 20px auto;
+    width: 600px;
+  }
+}
 .left {
   text-align: left;
 }
-
+.right {
+  text-align: right;
+}
 .first,
 .second,
 .third {
@@ -227,6 +234,11 @@ header nav a:hover {
   padding-left: 35px;
 }
 
+.project .description .description--up {
+  display: flex;
+  flex-direction: column;
+}
+
 .project .description.left {
   padding-left: 5px;
 }
@@ -234,6 +246,12 @@ header nav a:hover {
 .project .description h3 {
   color: #000;
   margin: 20px 0 12px;
+}
+
+.project .description .commercial {
+  color: #c4c4bf;
+  font-weight: 100;
+  font-size: 12px;
 }
 
 .dark .description h3 {
@@ -256,7 +274,14 @@ header nav a:hover {
   background: url(../images/noisy-texture-100x100-o3-d19-c-2b2b2bff-t0.png);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-
+.projects-grid {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 footer {
   background-color: #fff;
   border-top: 1px solid rgba(120, 102, 102, 0.2);
@@ -378,6 +403,7 @@ form {
   padding: 30px 40px;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin-bottom: 50px;
 }
 
 .form-control {
@@ -486,9 +512,6 @@ form button {
   .main-section h1 {
     margin-bottom: 50px;
   }
-  h1.section-title {
-    margin-bottom: 10px;
-  }
   /* .main-section a {
     text-decoration: none;
   } */
@@ -517,7 +540,7 @@ form button {
     height: 300px;
   }
 }
-@media (max-width: 340px) {
+@media (max-width: 375px) {
   .project .description {
     width: 100%;
   }
@@ -527,4 +550,38 @@ form button {
   .main-section .main-section__header {
     text-align: right;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #786666;
+  border: 0px none #786666;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #4a4a4a;
+}
+::-webkit-scrollbar-track {
+  background: #fff;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
