--- a/css/style.css
+++ b/css/style.css
@@ -234,11 +234,6 @@ header nav a:hover {
   padding-left: 35px;
 }
 
-.project .description .description--up {
-  display: flex;
-  flex-direction: column;
-}
-
 .project .description.left {
   padding-left: 5px;
 }
@@ -491,6 +486,14 @@ form button {
 .form-message.success {
   background-color: rgb(28, 168, 0);
   top: 0px;
+}
+@media (max-width: 590px) {
+  .project {
+    width: 90%;
+  }
+  .project .description {
+    width: 95%;
+  }
 }
 @media (max-width: 450px) {
   .form-message {
